--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,13 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+    <repositories>
+        <repository>
+          <id>itext</id>
+          <name>iText Repository - releases</name>
+          <url>https://repo.itextsupport.com/releases</url>
+        </repository>
+    </repositories>
     <build>
     <plugins>
             <plugin>
@@ -81,6 +88,11 @@
             <groupId>com.itextpdf</groupId>
             <artifactId>pdftest</artifactId>
             <version>7.0.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>pdfrender</artifactId>
+            <version>1.0.3</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
