--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,18 @@
                 <artifactId>findbugs-maven-plugin</artifactId>
                 <version>3.0.0</version>
             </plugin>
+            <plugin>
+                <groupId>net.revelc.code.formatter</groupId>
+                <artifactId>formatter-maven-plugin</artifactId>
+                <version>2.14.0</version>
+                <executions>
+                  <execution>
+                    <goals>
+                        <goal>format</goal>
+                    </goals>
+                  </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
     <dependencies>
