--- a/pom.xml
+++ b/pom.xml
@@ -151,6 +151,20 @@
             <scope>test</scope>
             <version>4.11</version>
         </dependency>
+<!--        Java FX -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>11</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
+            <version>17-ea+6</version>
+        </dependency>
+
+
+
     </dependencies>
     <name>pdfproject</name>
 </project>
