--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,9 @@
                         <goals>
                             <goal>report</goal>
                         </goals>
+                        <configuration>
+                            <dataFile>${project.build.directory}/jacoco.xml</dataFile>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
