--- a/pom.xml
+++ b/pom.xml
@@ -74,13 +74,10 @@
                     </execution>
                     <execution>
                         <id>report</id>
-                        <phase>prepare-package</phase>
+                        <phase>test</phase>
                         <goals>
                             <goal>report</goal>
                         </goals>
-                        <configuration>
-                            <dataFile>${project.build.directory}/jacoco.xml</dataFile>
-                        </configuration>
                     </execution>
                 </executions>
             </plugin>
